--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.5.0",
-    "framer-motion": "12.23.24"
-    
+    "react-router-dom": "^7.10.0",
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
